Fixed inverted images when in dark mode

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -268,10 +268,10 @@
     filter: invert(1);
   }
 
-  .logo,
+  /* .logo,
   .thirteen img {
     filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
+  } */
 }
 
 @keyframes rotate {
